# literstream

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/garage/: docker-compose.yml  garage.toml
docs/: how-it-works.md
examples/: 00_simple_usage.rs  01_complete.rs  checkpoint_demo.rs  encode_db.rs  fanout_bench.rs  gcs_probe.rs  gcs_replicate.rs  gcs_restore.rs  replicate.rs  sporadic_gcs.rs  wal_dump.rs
scripts/: cross-check-garage.sh  cross-check-litestream.sh  cross-check-sync.sh  cross-check.sh  garage-down.sh  garage-up.sh  gen-fixtures.sh  gen-wal-fixtures.sh  ops-estimate.py
scripts/bench/: README.md  run.sh  workload.py
src/: lib.rs  lock.rs
src/db/: error.rs  mod.rs
src/ltx/: checksum.rs  compactor.rs  decoder.rs  encoder.rs  error.rs  format.rs  mod.rs
src/storage/: error.rs  mod.rs
src/sync/: driver.rs  error.rs  level.rs  mod.rs  reader.rs  retention.rs
src/wal/: error.rs  format.rs  mod.rs  reader.rs
tests/: db_checkpoint.rs  gcs.rs  ltx_read.rs  ltx_write.rs  restore_memory.rs  s3_garage.rs  sync_replicate.rs  wal_read.rs
