[package]
name = "literstream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.1"
futures = "0.3.32"
# LZ4 *block* codec (raw blocks, no frame/size prefix) — matches the
# pierrec/lz4 UncompressBlock/CompressBlock that superfly/ltx uses per page.
lz4_flex = "0.11"
object_store = { version = "0.14.0", features = ["aws", "gcp"] }
# Pinned to 0.35: newer libsqlite3-sys build scripts use the unstable
# `cfg_select` feature, which this toolchain rejects.
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
