[package]
name = "literstream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.1"
futures = "0.3.32"
libc = "0.2.186"
# LZ4 *block* codec (raw blocks, no frame/size prefix) — matches the
# pierrec/lz4 UncompressBlock/CompressBlock that superfly/ltx uses per page.
lz4_flex = "0.11"
object_store = { version = "0.14.0", features = ["aws", "gcp"] }
# Pinned to 0.35: newer libsqlite3-sys build scripts use the unstable
# `cfg_select` feature, which this toolchain rejects.
rusqlite = { version = "0.35", features = ["bundled"] }
# Only needed by the optional `literstream` CLI binary (feature = "cli").
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
], optional = true }

[features]
# Builds the `literstream` replicate daemon binary.
cli = ["dep:tokio"]

[[bin]]
name = "literstream"
required-features = ["cli"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
# For the fanout_bench example's counting ObjectStore wrapper: object_store's
# ObjectStore / MultipartUpload traits are `#[async_trait]`, so an out-of-crate
# impl needs the same macro.
async-trait = "0.1"
